--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -6,6 +6,9 @@
 nameOverride: argo-events
 # -- String to fully override "argo-events.fullname" template
 fullnameOverride: ""
+# -- Override the namespace
+# @default -- `.Release.Namespace`
+namespaceOverride: ""
 
 # -- Deploy on OpenShift
 openshift: false
