feat(argo-events): Add ability to set .Values.namespaceOverride
Signed-off-by: Joshal Daftari <jdaftari@confluent.io>

--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -7,6 +7,10 @@ nameOverride: argo-events
 # -- String to fully override "argo-events.fullname" template
 fullnameOverride: ""
 
+# -- Override the namespace
+# @default -- `.Release.Namespace`
+namespaceOverride: ""
+
 # -- Deploy on OpenShift
 openshift: false
 
