feat(argo-rollouts): Allow customizing additional RBAC rules for other providers (#2556)
* Allow customizing additional RBAC rules for other providers

Signed-off-by: Alvaro.Camina <alvaro.camina@alteryx.com>

* Changing additionalRules from dict to list

Signed-off-by: Alvaro.Camina <alvaro.camina@alteryx.com>

* Changing additionalRules from dict to list and addressing comment

Signed-off-by: Alvaro.Camina <alvaro.camina@alteryx.com>

* Runing `./scripts/helm-docs.sh` to update the README

Signed-off-by: Alvaro.Camina <alvaro.camina@alteryx.com>

---------

Signed-off-by: Alvaro.Camina <alvaro.camina@alteryx.com>
Co-authored-by: Alvaro.Camina <alvaro.camina@alteryx.com>
Co-authored-by: Aikawa <yu.croco@gmail.com>
Co-authored-by: Jason Meridth <jmeridth@gmail.com>

--- a/charts/argo-rollouts/templates/controller/clusterrole.yaml
+++ b/charts/argo-rollouts/templates/controller/clusterrole.yaml
@@ -258,23 +258,26 @@ rules:
 {{- if .Values.providerRBAC.providers.contour }}
   # Access needed when using the Contour provider
 - apiGroups:
-    - projectcontour.io
+  - projectcontour.io
   resources:
-    - httpproxies
+  - httpproxies
   verbs:
-    - get
-    - list
-    - watch
-    - update
+  - get
+  - list
+  - watch
+  - update
 {{- end }}
 {{- if .Values.providerRBAC.providers.glooPlatform }}
   # Access needed when using the Gloo Platform provider
 - apiGroups:
-    - networking.gloo.solo.io
+  - networking.gloo.solo.io
   resources:
-    - routetables
+  - routetables
   verbs:
-    - '*'
+  - '*'
+{{- end }}
+{{- with .Values.providerRBAC.additionalRules }}
+{{ toYaml .  }}
 {{- end }}
 {{- end }}
 {{- end }}
