fix: Use range function properly (revert complex changes on item-templates)
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/charts/argocd-apps/ci/item-templates.yaml
+++ b/charts/argocd-apps/ci/item-templates.yaml
@@ -1,6 +1,5 @@
 itemTemplates:
-  first:
-    items:
+  - items:
       - name: my-appset
         generators: &generators
           - list:
@@ -30,8 +29,7 @@ itemTemplates:
             destination:
               server: "{{`{{cluster}}`}}"
               namespace: guestbook
-  second:
-    items:
+  - items:
       - name: my-appset
         generators:
           - list:
