--- a/charts/argocd-apps/templates/applicationsets.yaml
+++ b/charts/argocd-apps/templates/applicationsets.yaml
@@ -1,44 +1,43 @@
-
-{{- range $k, _:= .Values.applicationsets }}
+{{- range $appSetName, $appSetData:= .Values.applicationsets }}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  {{- with .additionalAnnotations }}
+  {{- with $appSetData.additionalAnnotations }}
   annotations:
     {{- range $key, $value := . }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
   {{- end }}
-  {{- with .additionalLabels }}
+  {{- with $appSetData.additionalLabels }}
   labels:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  name: {{ $k }}
-  {{- with .namespace }}
+  name: {{ $appSetName }}
+  {{- with $appSetData.namespace }}
   namespace: {{ . }}
   {{- end }}
 spec:
-  {{- if hasKey . "goTemplate" }}
-  goTemplate: {{ .goTemplate }}
+  {{- if hasKey $appSetData "goTemplate" }}
+  goTemplate: {{ $appSetData.goTemplate }}
   {{- end }}
-  {{- with .generators }}
+  {{- with $appSetData.generators }}
   generators:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- with .ignoreApplicationDifferences }}
+  {{- with $appSetData.ignoreApplicationDifferences }}
   ignoreApplicationDifferences:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- with .strategy }}
+  {{- with $appSetData.strategy }}
   strategy:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- with .syncPolicy }}
+  {{- with $appSetData.syncPolicy }}
   syncPolicy:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- with .template }}
+  {{- with $appSetData.template }}
   template:
     {{- with .metadata }}
     metadata:
@@ -84,7 +83,7 @@ spec:
       {{- end }}
     {{- end -}}
   {{- end }}
-  {{- with .templatePatch }}
+  {{- with $appSetData.templatePatch }}
   templatePatch: |
     {{- . | nindent 4 }}
   {{- end }}
