--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -1,5 +1,5 @@
 # -- Deploy Argo CD Applications within this helm release
-# @default -- `[]` (See [values.yaml])
+# @default -- `{}` (See [values.yaml])
 ## Ref: https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/
 applications: {}
 #  guestbook:
@@ -43,7 +43,7 @@ applications: {}
 #      value: https://argoproj.github.io/
 
 # -- Deploy Argo CD Projects within this helm release
-# @default -- `[]` (See [values.yaml])
+# @default -- `{}` (See [values.yaml])
 ## Ref: https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/
 projects: {}
 #  guestbook:
@@ -90,7 +90,7 @@ projects: {}
 #    - argocd
 
 # -- Deploy Argo CD ApplicationSets within this helm release
-# @default -- `[]` (See [values.yaml])
+# @default -- `{}` (See [values.yaml])
 ## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/applicationset/
 applicationsets: {}
 #  guestbook:
@@ -175,72 +175,70 @@ applicationsets: {}
 # --  Deploy Argo CD Applications/ApplicationSets/Projects within this helm release
 # @default -- `[]` (See [values.yaml])
 ## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/applicationset/
-itemTemplates: {}
-#  first:
-#    items:
-#      - name: my-appset
-#        generators: &generators
-#          - list:
-#              elements:
-#                - cluster: engineering-dev
-#                  url: https://1.2.3.4
-#                - cluster: engineering-prod
-#                  url: https://2.4.6.8
-#                - cluster: finance-preprod
-#                  url: https://9.8.7.6
-#    template:
-#      apiVersion: argoproj.io/v1alpha1
-#      kind: ApplicationSet
-#      metadata:
-#        name: "{{ .name }}"
-#      spec:
-#        generators: *generators
-#        template:
-#          metadata:
-#            name: "{{`{{cluster}}`}}-guestbook"
-#          spec:
-#            project: my-project
-#            source:
-#              repoURL: https://github.com/infra-team/cluster-deployments.git
-#              targetRevision: HEAD
-#              path: guestbook/{{`{{cluster}}`}}
-#            destination:
-#              server: "{{`{{cluster}}`}}"
-#              namespace: guestbook
-#  second:
-#    items:
-#      - name: my-appset
-#        generators:
-#          - list:
-#              elements:
-#                - cluster: engineering-dev
-#                  url: https://1.2.3.4
-#                - cluster: engineering-prod
-#                  url: https://2.4.6.8
-#                - cluster: finance-preprod
-#                  url: https://9.8.7.6
-#    template: |-
-#      apiVersion: argoproj.io/v1alpha1
-#      kind: ApplicationSet
-#      metadata:
-#        name: {{ .name }}
-#      spec:
-#        generators: {{ toYaml .generators | nindent 4 }}
-#        template:
-#          metadata:
-#            name: '{{`{{cluster}}`}}-guestbook'
-#          spec:
-#            project: my-project
-#            source:
-#              repoURL: https://github.com/infra-team/cluster-deployments.git
-#              targetRevision: HEAD
-#              path: guestbook/{{`{{cluster}}`}}
-#            destination:
-#              server: '{{`{{cluster}}`}}'
-#              namespace: guestbook
+itemTemplates: []
+# - items:
+#     - name: my-appset
+#       generators: &generators
+#         - list:
+#             elements:
+#               - cluster: engineering-dev
+#                 url: https://1.2.3.4
+#               - cluster: engineering-prod
+#                 url: https://2.4.6.8
+#               - cluster: finance-preprod
+#                 url: https://9.8.7.6
+#   template:
+#     apiVersion: argoproj.io/v1alpha1
+#     kind: ApplicationSet
+#     metadata:
+#       name: "{{ .name }}"
+#     spec:
+#       generators: *generators
+#       template:
+#         metadata:
+#           name: "{{`{{cluster}}`}}-guestbook"
+#         spec:
+#           project: my-project
+#           source:
+#             repoURL: https://github.com/infra-team/cluster-deployments.git
+#             targetRevision: HEAD
+#             path: guestbook/{{`{{cluster}}`}}
+#           destination:
+#             server: "{{`{{cluster}}`}}"
+#             namespace: guestbook
+# - items:
+#     - name: my-appset
+#       generators:
+#         - list:
+#             elements:
+#               - cluster: engineering-dev
+#                 url: https://1.2.3.4
+#               - cluster: engineering-prod
+#                 url: https://2.4.6.8
+#               - cluster: finance-preprod
+#                 url: https://9.8.7.6
+#   template: |-
+#     apiVersion: argoproj.io/v1alpha1
+#     kind: ApplicationSet
+#     metadata:
+#       name: {{ .name }}
+#     spec:
+#       generators: {{ toYaml .generators | nindent 4 }}
+#       template:
+#         metadata:
+#           name: '{{`{{cluster}}`}}-guestbook'
+#         spec:
+#           project: my-project
+#           source:
+#             repoURL: https://github.com/infra-team/cluster-deployments.git
+#             targetRevision: HEAD
+#             path: guestbook/{{`{{cluster}}`}}
+#           destination:
+#             server: '{{`{{cluster}}`}}'
+#             namespace: guestbook
 
 # -- DEPRECATED - Please refer [Deprecation Notice](https://github.com/argoproj-labs/argocd-extensions?tab=readme-ov-file#deprecation-notice) for more info.
-# @default -- `[]` (See [values.yaml])
+# @default -- `{}` (See [values.yaml])
 ## This function in tech preview stage, do expect unstability or breaking changes in newer versions. Bump image.tag if necessary.
 ## Ref: https://github.com/argoproj-labs/argocd-extensions
 extensions: {}
@@ -253,4 +251,3 @@ extensions: {}
 #          url: https://github.com/argoproj-labs/argocd-example-extension.git
 #      - web:
 #          url: https://github.com/argoproj-labs/argocd-example-extension/releases/download/v0.1.0/extension.tar
-#
