feat(argo-rollouts): add minimum RBAC for Gateway API
Signed-off-by: congiv <givencp@gmail.com>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -277,6 +277,8 @@ providerRBAC:
     contour: true
     # -- Adds RBAC rules for the Gloo Platform provider, see `https://github.com/argoproj-labs/rollouts-plugin-trafficrouter-glooplatform/blob/main/README.md`
     glooPlatform: true
+    # -- Adds RBAC rules for the Gateway API provider
+    gatewayAPI: true
   # -- Additional RBAC rules for others providers
   additionalRules: []
 
