--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Bump argo-cd to v2.10.4
+    - kind: added
+      description: Support for Overriding Argo CD Server ClusterRole Permissions
