feat(argo-cd): Add sizeLimit parameters on emptyDir
Signed-off-by: Pierre BLAIS <pierreblais@hotmail.fr>

--- a/charts/argo-cd/templates/argocd-application-controller/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/deployment.yaml
@@ -334,7 +334,13 @@ spec:
         {{- toYaml . | nindent 6 }}
       {{- end }}
       - name: argocd-home
+        {{- if .Values.controller.emptyDir.sizeLimit }}
+        emptyDir:
+          sizeLimit: {{ .Values.controller.emptyDir.sizeLimit }}
+        {{- else }}
         emptyDir: {}
+        {{- end }}
+
       - name: argocd-repo-server-tls
         secret:
           secretName: argocd-repo-server-tls
