--- a/charts/argo-rollouts/templates/crds/analysis-run-crd.yaml
+++ b/charts/argo-rollouts/templates/crds/analysis-run-crd.yaml
@@ -1,18 +1,9 @@
-{{- if .Values.installCRDs }}
+# https://raw.githubusercontent.com/argoproj/argo-rollouts/v1.6.6/manifests/crds/analysis-run-crd.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.12.1
-    {{- if .Values.keepCRDs }}
-    "helm.sh/resource-policy": keep
-    {{- end }}
-    {{- if .Values.crdAnnotations }}
-    {{- toYaml .Values.crdAnnotations | nindent 4 }}
-    {{- end }}
-  labels:
-    app.kubernetes.io/name: argo-rollouts
-    app.kubernetes.io/part-of: argo-rollouts
   name: analysisruns.argoproj.io
 spec:
   group: argoproj.io
@@ -189,22 +180,13 @@ spec:
                         datadog:
                           properties:
                             apiVersion:
-                              default: v1
-                              enum:
-                              - v1
-                              - v2
-                              type: string
-                            formula:
                               type: string
                             interval:
-                              default: 5m
                               type: string
-                            queries:
-                              additionalProperties:
-                                type: string
-                              type: object
                             query:
                               type: string
+                          required:
+                          - query
                           type: object
                         graphite:
                           properties:
@@ -2818,19 +2800,6 @@ spec:
                               type: string
                             authentication:
                               properties:
-                                oauth2:
-                                  properties:
-                                    clientId:
-                                      type: string
-                                    clientSecret:
-                                      type: string
-                                    scopes:
-                                      items:
-                                        type: string
-                                      type: array
-                                    tokenUrl:
-                                      type: string
-                                  type: object
                                 sigv4:
                                   properties:
                                     profile:
@@ -2879,31 +2848,6 @@ spec:
                           type: object
                         web:
                           properties:
-                            authentication:
-                              properties:
-                                oauth2:
-                                  properties:
-                                    clientId:
-                                      type: string
-                                    clientSecret:
-                                      type: string
-                                    scopes:
-                                      items:
-                                        type: string
-                                      type: array
-                                    tokenUrl:
-                                      type: string
-                                  type: object
-                                sigv4:
-                                  properties:
-                                    profile:
-                                      type: string
-                                    region:
-                                      type: string
-                                    roleArn:
-                                      type: string
-                                  type: object
-                              type: object
                             body:
                               type: string
                             headers:
@@ -3066,4 +3010,3 @@ spec:
     served: true
     storage: true
     subresources: {}
-{{- end }}
