argo-cd v2.9-2024.4.10-dcc1723fd

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.9-2024.3.17-6fd9979e1
+appVersion: v2.9-2024.4.10-dcc1723fd
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.53.12-9-cap-2.9-2024.3.17-6fd9979e1
+version: 5.53.12-10-cap-2.9-2024.4.10-dcc1723fd
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Change ArgoCD image to 2.9-2024.3.17-6fd9979e1 which includes fix in session manager.
+      description: Upgrade argo-cd to v2.9-2024.4.10-dcc1723fd which includes fix for application versions 
