--- a/charts/argo-cd/templates/argocd-server/metrics.yaml
+++ b/charts/argo-cd/templates/argocd-server/metrics.yaml
@@ -24,6 +24,12 @@ spec:
   {{- if and .Values.server.metrics.service.clusterIP (eq .Values.server.metrics.service.type "ClusterIP") }}
   clusterIP: {{ .Values.server.metrics.service.clusterIP }}
   {{- end }}
+  {{- if .Values.server.metrics.service.ipFamilyPolicy }}
+  ipFamilyPolicy: {{ .Values.server.metrics.service.ipFamilyPolicy }}
+  {{- end }}
+  {{- if .Values.server.metrics.service.ipFamilies }}
+  ipFamilies: {{ .Values.server.metrics.service.ipFamilies | toYaml | nindent 2 }}
+  {{- end }}
   ports:
   - name: {{ .Values.server.metrics.service.portName }}
     protocol: TCP
