--- a/charts/argo-cd/templates/argocd-applicationset/service.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/service.yaml
@@ -17,6 +17,12 @@ metadata:
 {{- end }}
 spec:
   type: {{ .Values.applicationSet.service.type }}
+{{- if .Values.applicationSet.service.ipFamilyPolicy }}
+  ipFamilyPolicy: {{ .Values.applicationSet.service.ipFamilyPolicy }}
+{{- end }}
+{{- if .Values.applicationSet.service.ipFamilies }}
+  ipFamilies: {{ .Values.applicationSet.service.ipFamilies | toYaml | nindent 2 }}
+{{- end }}
   ports:
   - name: {{ .Values.applicationSet.service.portName }}
     port: {{ .Values.applicationSet.service.port }}
