This fix is on for ingress for argocd-server. The tls secret is variablized. The secret can not be a static value and it absolutely does not make sens eto use extyra
Signed-off-by: Arpan Chatterjee <btwseeu78@gmail.com>

--- a/charts/argo-cd/templates/argocd-server/ingress.yaml
+++ b/charts/argo-cd/templates/argocd-server/ingress.yaml
@@ -60,7 +60,7 @@ spec:
       -  {{ .name }}
         {{- end }}
       {{- end }}
-      secretName: argocd-server-tls
+      secretName: {{ .Values.server.ingress.secretName }}
     {{- end }}
     {{- with .Values.server.ingress.extraTls }}
       {{- toYaml . | nindent 4 }}
