revert naughty renovate change
Signed-off-by: Tim Collins <tim@thecollins.team>

--- a/renovate.json
+++ b/renovate.json
@@ -14,8 +14,7 @@
     "**/charts/argo-events/Chart.yaml",
     "**/charts/argo-rollouts/Chart.yaml",
     "**/charts/argocd-image-updater/Chart.yaml",
-    "**/.github/workflows/renovate.yaml",
-    "**/.github/workflows"
+    "**/.github/workflows/renovate.yaml"
   ],
   "customManagers": [
     {
