fix(argo-workflows): hyphen typo in values.yaml comment
Signed-off-by: Mykyta Orlov <orlovmyk@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -700,7 +700,7 @@ server:
       name: argo-server-sso
       # -- Key of a secret to retrieve the app OIDC client secret
       key: client-secret
-    # - The OIDC redirect URL. Should be in the form <argo-root-url>/oauth2/callback.
+    # -- The OIDC redirect URL. Should be in the form <argo-root-url>/oauth2/callback.
     redirectUrl: ""
     rbac:
       # -- Adds ServiceAccount Policy to server (Cluster)Role.
