feat(argo-rollouts): Add podLabels at the controller & dashboard level (#2678)

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -53,6 +53,8 @@ controller:
   deploymentLabels: {}
   # -- Annotations to be added to application controller pods
   podAnnotations: {}
+  # -- Labels to be added to the application controller pods
+  podLabels: {}
   # -- [Node selector]
   nodeSelector: {}
   # -- [Tolerations] for use with node taints
@@ -295,6 +297,8 @@ dashboard:
   deploymentLabels: {}
   # -- Annotations to be added to application dashboard pods
   podAnnotations: {}
+  # -- Labels to be added to the application dashboard pods
+  podLabels: {}
   # -- [Node selector]
   nodeSelector: {}
   # -- [Tolerations] for use with node taints
